# dictx

./: CMakeLists.txt  README.md
ext/phpx/: dictx.c  dictx.php  make.sh  php_dictx.h
src/: CMakeLists.txt  dictapi.cpp  dictapi.h  loader.cpp  loader.h  main.cpp
src/process/: dict.cpp  dict.h  hashtable.cpp  hashtable.h  lockfile.cpp  lockfile.h  shmem.cpp  shmem.h
src/process/unitest/: test_hash_read.cpp
src/thread/: dict.cpp  dict.h
src/thread/unitest/: test_thr_hash.cpp
tests/: buffio.cpp  mmap.cpp  shm_open1.cpp  shm_open2.cpp
